# invoice-scraper

./: .gitignore  .pylintrc  CLAUDE.md  README.md  conftest.py  google_secrets_client.py  logger.py  main.py  pyproject.toml  repomix-output.xml  review.md  utils.py
.github/workflows/: linter.yml
.playwright-mcp/: page-2026-05-04T20-36-31-426Z.yml
src/: scanner_config.py  utils.py
src/invoice_scraper/: config.py  logger.py  secrets_client.py  utils.py
src/invoice_scraper/scanners/: amisragas.py  arnona.py  base.py  chatgpt.py  claudecode.py  google_workspace.py  meitav.py  partner.py
src/scanners/: amisragas_scanner_test.py  arnona_scanner_test.py  chatgpt_scanner_test.py  claudecode_scanner_test.py  google_workspace_scanner_test.py  partner_scanner_test.py  water_scanner_test.py
tests/: conftest.py
tests/scanners/: test_amisragas.py  test_arnona.py  test_chatgpt.py  test_claudecode.py  test_google_workspace.py  test_meitav.py  test_partner.py
